[package]
name = "mobydb-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark-api"
path = "src/main.rs"

[[bin]]
name = "seed-data"
path = "src/seed.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
h3o = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
blake3 = "1"
futures = "0.3"
