[package]
name    = "mobydb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
h3o           = "0.7"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
bincode       = "2"
hex           = "0.4"
thiserror     = "1"
blake3        = "1"
chrono        = "0.4"
