[package]
name    = "mobydb-merkle"
version = "0.1.0"
edition = "2021"

[dependencies]
mobydb-core    = { path = "../mobydb-core" }
mobydb-storage = { path = "../mobydb-storage" }
blake3         = "1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "1"
tracing        = "0.1"
hex            = "0.4"
chrono         = "0.4"
