[package]
name    = "mobydb-query"
version = "0.1.0"
edition = "2021"

[dependencies]
mobydb-core    = { path = "../mobydb-core" }
mobydb-storage = { path = "../mobydb-storage" }
mobydb-merkle  = { path = "../mobydb-merkle" }
h3o            = "0.7"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
thiserror      = "1"
tracing        = "0.1"
