[package]
name    = "mobydb-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
mobydb-core = { path = "../mobydb-core" }
rocksdb     = { version = "0.24", features = ["multi-threaded-cf"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
hex         = "0.4"
thiserror   = "1"
tracing     = "0.1"

[dev-dependencies]
rand     = "0.8"
tempfile = "3"
